/***********************************************************************
 X3 ChangeLog

2006-07-10  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: fixed crash bug trying to deref the handleinfo of a
	non-logged-in user (null pointer)

2006-07-09  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fixed bug where unignores were getting sent to the
	user multiple times, instead of to each online nick once.

2006-07-09  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: Fixes for addignore/delignore corruption +missed a
	spot. Ugh, messed up the fix. Trying again :)

2006-07-10  Neil Spierling <sirvulcan@gmail.com>

	* src/chanserv.c: INVITE now checks the targets ignore/silence list.
	If the target is ignoring the person inviting them then the invite
	is denied.

2006-07-07  Alex Schumann  <rubin@afternet.org>

	* src/mod-memoserv.c: pLaYa reported a crash/corruption bug in
	memoserv most easily seen when sending short memos. Rewrote the flag
	handling part of memo send to correct it.

2006-07-05  Alex Schumann  <rubin@afternet.org>

	* src/helpfile.c: pLaYa pointed out the table code row count is off by
	one. Fixed.

2006-06-27  Neil Spierling <sirvulcan@gmail.com>

	* configure: Regenerated.

	* configure.in: Make use of TRE regexp library. Its more powerful
	than the standard library (http://laurikari.net/tre/index.html).
	Im also pondering adding services side regexp bans, X3 would
	probably required a channel flag called say advanced that can
	only be set by the owner. If enabled then regexp bans can be
	used. I also added an output saying what modules are enabled,
	what protocol is enabled, what malloc is choosen and if debugging
	is enabled. Just a bit of a message as the user will of seen
	programs just finish compiling and he/she/it may think it
	was X3 compiling, but it was just TRE compiling. They still need
	to compile X3.

	* src/config.h.in: Regenerated.

	* src/Makefile.am: Tweak for TRE.

	* src/Makefile.in: Regenerated.
